policies/docker-cis-5.1-ensure-that-if-applicable-an-apparmor-profile-is-enabled.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-5.1-ensure-that-if-applicable-an-apparmor-profile-is-enabled
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: AppArmor is an effective and easy-to-use Linux application security
    system. It is available on some Linux distributions by default, for example, on
    Debian and Ubuntu.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions: []
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Docker CIS 5.1 Ensure that, if applicable, an AppArmor Profile
    is enabled
  policySections:
  - sectionName: Section 1
    policyGroups:
    - fieldName: AppArmor Profile
      booleanOperator: OR
      negate: false
      values:
      - value: unconfined
  rationale: AppArmor protects the Linux OS and applications from various threats
    by enforcing a security policy which is also known as an AppArmor profile. You
    can create your own AppArmor profile for containers or use Docker's default profile.
    Enabling this feature enforces security policies on containers as defined in the
    profile.
  remediation: If AppArmor is applicable for your Linux OS, you should enable it.  Verify
    AppArmor is installed, create or import an AppArmor profile for your containers,
    enable enforcement of the policy, and add the appropriate AppArmor annotations
    to your deployment.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
